--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="public/stylesheets/style.css">
   <!-- ****** faviconit.com favicons ****** -->
-	<link rel="shortcut icon" href="public/images/icons/favicon.ico">
-	<link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
 	<link rel="icon" type="image/png" sizes="196x196" href="public/images/icons/favicon-192.png">
 	<link rel="icon" type="image/png" sizes="160x160" href="public/images/icons/favicon-160.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="public/images/icons/favicon-96.png">
