--- a/tasks.html
+++ b/tasks.html
@@ -6,52 +6,75 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#ffffe0"/>
+  <meta name="theme-color" content="#ffffe0" />
   <meta name="Description" content="Task list for better organization and increased productivity!">
   <link rel="manifest" href="manifest.webmanifest">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="public/stylesheets/style.css">
   <!-- ****** faviconit.com favicons ****** -->
-	<link rel="shortcut icon" href="favicon.ico">
-	<link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
-	<link rel="icon" type="image/png" sizes="196x196" href="public/images/icons/favicon-192.png">
-	<link rel="icon" type="image/png" sizes="160x160" href="public/images/icons/favicon-160.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="public/images/icons/favicon-96.png">
-	<link rel="icon" type="image/png" sizes="64x64" href="public/images/icons/favicon-64.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="public/images/icons/favicon-32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="public/images/icons/favicon-16.png">
-	<link rel="apple-touch-icon" href="public/images/icons/favicon-57.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="public/images/icons/favicon-114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="public/images/icons/favicon-72.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="public/images/icons/favicon-144.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="public/images/icons/favicon-60.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="public/images/icons/favicon-120.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="public/images/icons/favicon-76.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="public/images/icons/favicon-152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="public/images/icons/favicon-180.png">
-	<meta name="msapplication-TileColor" content="#FFFFFF">
-	<meta name="msapplication-TileImage" content="public/images/icons/favicon-144.png">
-	<meta name="msapplication-config" content="public/images/icons/browserconfig.xml">
-	<!-- ****** faviconit.com favicons ****** -->
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="196x196" href="public/images/icons/favicon-192.png">
+  <link rel="icon" type="image/png" sizes="160x160" href="public/images/icons/favicon-160.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="public/images/icons/favicon-96.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="public/images/icons/favicon-64.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="public/images/icons/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="public/images/icons/favicon-16.png">
+  <link rel="apple-touch-icon" href="public/images/icons/favicon-57.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="public/images/icons/favicon-114.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="public/images/icons/favicon-72.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="public/images/icons/favicon-144.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="public/images/icons/favicon-60.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="public/images/icons/favicon-120.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="public/images/icons/favicon-76.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="public/images/icons/favicon-152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="public/images/icons/favicon-180.png">
+  <meta name="msapplication-TileColor" content="#FFFFFF">
+  <meta name="msapplication-TileImage" content="public/images/icons/favicon-144.png">
+  <meta name="msapplication-config" content="public/images/icons/browserconfig.xml">
+  <!-- ****** faviconit.com favicons ****** -->
 </head>
 
 <body>
   <header>
-    <h1 class="text-center py-4 px-2" id="task-list-title"></h1>
-    <div class="btn-group dropleft setting-box">
+
+    <nav class="navbar navbar-light flex-row-reverse">
+      <button type="button" class="btn rounded" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Settings">
+        <i class="fas fa-cog" aria-hidden="true"></i>
+      </button>
+      <div class="collapse navbar-collapse bg-light" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item nav-link" id="change-title" data-toggle="modal" data-target="#change-task-list-title">
+            Change task list title</li>
+          <li class="nav-item nav-link" id="remove-all">Remove all tasks</li>
+          <li class="nav-item nav-link text-success" id="remove-done">Remove done tasks</li>
+          <li class="nav-item nav-link" data-toggle="modal" data-target="#uploadFile">Upload Task List from
+            file</li>
+          <li class="nav-item nav-link" id="save-tasks">Save Task List to file</li>
+          <div class="dropdown-divider"></div>
+          <li class="nav-item nav-link text-danger" id="reset-all">Reset - clear all </li>
+        </ul>
+      </div>
+    </nav>
+
+    <h1 class="text-center pb-4 px-2" id="task-list-title"></h1>
+
+<!--<div class="btn-group dropleft setting-box">
       <button type="button" class="btn rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
         aria-label="Settings">
         <i class="fas fa-cog" aria-hidden="true"></i>
       </button>
       <div class="dropdown-menu">
         <ul class="list-group rounded">
-          <li class="list-group-item dropdown-item" id="change-title" data-toggle="modal" data-target="#change-task-list-title">Change
+          <li class="list-group-item dropdown-item" id="change-title" data-toggle="modal"
+            data-target="#change-task-list-title">Change
             task list title</li>
           <li class="list-group-item dropdown-item" id="remove-all">Remove all tasks</li>
           <li class="list-group-item dropdown-item text-success" id="remove-done">Remove done tasks</li>
@@ -61,7 +84,8 @@
           <li class="list-group-item dropdown-item text-danger" id="reset-all">Hard reset - clear all </li>
         </ul>
       </div>
-    </div>
+    </div>-->
+    
   </header>
 
   <div class="alert alert-danger error" role="alert"></div>
@@ -85,7 +109,8 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-success" id="bttn-change-title" data-dismiss="modal">Save changes</button>
+          <button type="button" class="btn btn-success" id="bttn-change-title" data-dismiss="modal">Save
+            changes</button>
         </div>
       </div>
     </div>
@@ -114,26 +139,29 @@
 
   <div class="container">
     <div class="input-group mb-3">
-      <input type="text" class="form-control" name="task" id="task" placeholder="Type Your task here..." aria-label="Type your task here"
-        aria-describedby="button-add-task">
+      <input type="text" class="form-control" name="task" id="task" placeholder="Type Your task here..."
+        aria-label="Type your task here" aria-describedby="button-add-task">
       <div class="input-group-append">
         <button class="btn btn-secondary" type="button" id="button-add-task">Add</button>
       </div>
     </div>
     <div class="progress mb-1">
-      <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="0"
-        aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+      <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
+        aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
     </div>
     <ul class="list-group mb-2 rounded" id="tasks-list">
     </ul>
   </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
   <script src="public/javascripts/main.js"></script>
   <script src="public/javascripts/for-sw.js"></script>
