--- a/tasks.html
+++ b/tasks.html
@@ -64,7 +64,7 @@
       </div>
     </nav>
 
-    <h1 class="text-center pb-4 px-2" id="task-list-title"></h1>
+    <h1 class="text-center py-4 px-2" id="task-list-title"></h1>
 
 <!--<div class="btn-group dropleft setting-box">
       <button type="button" class="btn rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
