--- a/tasks.html
+++ b/tasks.html
@@ -43,7 +43,6 @@
 
 <body>
   <header>
-
     <nav class="navbar navbar-light flex-row-reverse">
       <button type="button" class="btn rounded" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Settings">
@@ -53,39 +52,25 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item nav-link" id="change-title" data-toggle="modal" data-target="#change-task-list-title">
             Change task list title</li>
-          <li class="nav-item nav-link d-flex" id="change-task-list"><button type="button" class="btn btn-secondary"><i
-                class="fas fa-angle-left"></i></button><span id="current-title" class="flex-grow-1">title0</span><button type="button"
-              class="btn btn-secondary"><i class="fas fa-angle-right"></i></button></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Task lists
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="task-lists">
+              <div></div>
+            </ul>
+          </li>
           <li class="nav-item nav-link" id="remove-all">Remove all tasks</li>
           <li class="nav-item nav-link text-success" id="remove-done">Remove done tasks</li>
           <li class="nav-item nav-link" data-toggle="modal" data-target="#uploadFile">Upload Task List from
             file</li>
           <li class="nav-item nav-link" id="save-tasks">Save Task List to file</li>
           <div class="dropdown-divider"></div>
-          <li class="nav-item nav-link text-danger" id="reset-all">Reset - clear all </li>
+          <li class="nav-item nav-link text-danger" id="delete-task-list">Delete Task List</li>
         </ul>
       </div>
     </nav>
-    <!--<div class="btn-group dropleft setting-box">
-      <button type="button" class="btn rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-        aria-label="Settings">
-        <i class="fas fa-cog" aria-hidden="true"></i>
-      </button>
-      <div class="dropdown-menu">
-        <ul class="list-group rounded">
-          <li class="list-group-item dropdown-item" id="change-title" data-toggle="modal"
-            data-target="#change-task-list-title">Change
-            task list title</li>
-          <li class="list-group-item dropdown-item" id="remove-all">Remove all tasks</li>
-          <li class="list-group-item dropdown-item text-success" id="remove-done">Remove done tasks</li>
-          <li class="list-group-item dropdown-item" data-toggle="modal" data-target="#uploadFile">Upload Task List from
-            file</li>
-          <li class="list-group-item dropdown-item" id="save-tasks">Save Task List to file</li>
-          <li class="list-group-item dropdown-item text-danger" id="reset-all">Hard reset - clear all </li>
-        </ul>
-      </div>
-    </div>-->
-
   </header>
 
   <h1 class="text-center py-4 px-2" id="task-list-title"></h1>
@@ -104,9 +89,9 @@
         </div>
         <div class="modal-body">
           <div class="form-group">
-            <label for="new-title"></label>
-            <input type="text" class="form-control" name="new-title" id="new-title" aria-describedby="helpId"
-              placeholder="Type new title here...">
+            <label for="cheanged-title"></label>
+            <input type="text" class="form-control" name="changed-title" id="changed-title"
+              aria-describedby="bttn-change-title" placeholder="Type new title here...">
           </div>
         </div>
         <div class="modal-footer">
@@ -118,22 +103,49 @@
     </div>
   </div>
 
-  <div class="modal fade" id="uploadFile" tabindex="-1" role="dialog" aria-labelledby="Upload task list file"
+  <div class="modal fade" id="create-new-task-list" tabindex="-1" role="dialog" aria-labelledby="creating-task-list"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="uploadFileLabel">Upload task list file</h5>
+          <h5 class="modal-title" id="creating-task-list">Type new title for Your task list</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          <input type="file" class="" id="files">
+          <div class="form-group">
+            <label for="new-title"></label>
+            <input type="text" class="form-control" name="new-title" id="new-title"
+              aria-describedby="create-new-task-list-bttn" placeholder="Type new title here...">
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-success" id="upload-tasks" data-dismiss="modal">Save changes</button>
+          <button type="button" class="btn btn-success" id="create-new-task-list-bttn" data-dismiss="modal">Save
+            changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="uploadFile" tabindex="-1" role="dialog" aria-labelledby="upload-task-list-file"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="upload-task-list-file">Upload task list file</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <input type="file" class="form-control" name="new-title" id="files" aria-describedby="upload-tasks-from-file">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-success" id="upload-tasks-from-file" data-dismiss="modal">Save
+            changes</button>
         </div>
       </div>
     </div>
