minor changes for better experience

--- a/tasks.html
+++ b/tasks.html
@@ -95,8 +95,8 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-success" id="bttn-change-title" data-dismiss="modal">Save
-            changes</button>
+          <button type="button" class="btn btn-success" id="bttn-change-title" data-dismiss="modal">Change
+            title</button>
         </div>
       </div>
     </div>
@@ -121,8 +121,8 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-success" id="create-new-task-list-bttn" data-dismiss="modal">Save
-            changes</button>
+          <button type="button" class="btn btn-success" id="create-new-task-list-bttn" data-dismiss="modal">Create new
+            Task List</button>
         </div>
       </div>
     </div>
