--- a/tasks.html
+++ b/tasks.html
@@ -17,6 +17,10 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="public/stylesheets/style.css">
+  <!-- Add to home screen for Safari on iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#ffffe0">
+  <meta name="apple-mobile-web-app-title" content="Task List">
   <!-- ****** faviconit.com favicons ****** -->
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
@@ -35,7 +39,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="public/images/icons/favicon-76.png">
   <link rel="apple-touch-icon" sizes="152x152" href="public/images/icons/favicon-152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="public/images/icons/favicon-180.png">
-  <meta name="msapplication-TileColor" content="#FFFFFF">
+  <meta name="msapplication-TileColor" content="#000000">
   <meta name="msapplication-TileImage" content="public/images/icons/favicon-144.png">
   <meta name="msapplication-config" content="public/images/icons/browserconfig.xml">
   <!-- ****** faviconit.com favicons ****** -->
