--- a/tasks.html
+++ b/tasks.html
@@ -132,6 +132,27 @@
     </div>
   </div>
 
+  <div class="modal fade" id="overwrite-task-list" tabindex="-1" role="dialog" aria-labelledby="overwriting-task-list"
+  aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="overwriting-task-list">There is a task list called <span id='task-list-to-overwrite'></span></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Do you want to overwrite it?</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="overwrite-task-list-bttn" data-dismiss="modal">Overwrite</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="modal fade" id="uploadFile" tabindex="-1" role="dialog" aria-labelledby="upload-task-list-file"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
