changed class to success

--- a/tasks.html
+++ b/tasks.html
@@ -147,7 +147,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" id="overwrite-task-list-bttn" data-dismiss="modal">Overwrite</button>
+          <button type="button" class="btn btn-success" id="overwrite-task-list-bttn" data-dismiss="modal">Overwrite</button>
         </div>
       </div>
     </div>
