--- a/tasks.html
+++ b/tasks.html
@@ -54,7 +54,7 @@
       </button>
       <div class="collapse navbar-collapse bg-light" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown pt-2">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Task lists
@@ -70,7 +70,7 @@
           <li class="nav-item nav-link text-success" id="remove-done">Remove done tasks</li>
           <li class="nav-item nav-link text-warning" id="remove-all">Remove all tasks</li>
           <div class="dropdown-divider"></div>
-          <li class="nav-item nav-link text-danger" id="delete-task-list">Delete Task List</li>
+          <li class="nav-item nav-link text-danger pb-3" id="delete-task-list">Delete Task List</li>
         </ul>
       </div>
     </nav>
