--- a/tasks.html
+++ b/tasks.html
@@ -52,7 +52,7 @@
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Settings">
         <i class="fas fa-cog" aria-hidden="true"></i>
       </button>
-      <div class="collapse navbar-collapse bg-light" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse bg-light rounded" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item dropdown pt-2">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
