added double click to confirm action,  added popovers

--- a/tasks.html
+++ b/tasks.html
@@ -67,10 +67,10 @@
             file</li>
           <li class="nav-item nav-link" id="save-tasks">Save Task List to file</li>
           <div class="dropdown-divider"></div>
-          <li class="nav-item nav-link text-success" id="remove-done">Remove done tasks</li>
-          <li class="nav-item nav-link text-warning" id="remove-all">Remove all tasks</li>
+          <li class="nav-item nav-link text-success" id="remove-done" data-toggle="popover" data-placement="bottom" data-content="Double click to confirm!">Remove done tasks</li>
+          <li class="nav-item nav-link text-warning" id="remove-all" data-toggle="popover" data-placement="bottom" data-content="Double click to confirm!">Remove all tasks</li>
           <div class="dropdown-divider"></div>
-          <li class="nav-item nav-link text-danger pb-3" id="delete-task-list">Delete Task List</li>
+          <li class="nav-item nav-link text-danger pb-3" id="delete-task-list" data-toggle="popover" data-placement="bottom" data-content="Double click to confirm!">Delete Task List</li>
         </ul>
       </div>
     </nav>
