--- a/tasks.html
+++ b/tasks.html
@@ -78,7 +78,19 @@
 
   <h1 class="text-center py-4 px-2" id="task-list-title"></h1>
 
-  <div class="alert alert-danger error" role="alert"></div>
+  <div class="modal fade" id="info-bar" tabindex="-1" role="alert" aria-labelledby="info-for-user"
+  aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header alert-secondary">
+          <h5 class="modal-title" id="info-for-user"></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="modal fade" id="change-task-list-title" tabindex="-1" role="dialog" aria-labelledby="changing-title"
     aria-hidden="true">
