--- a/tasks.html
+++ b/tasks.html
@@ -78,7 +78,7 @@
       </div>
     </nav>
   </header>
-  
+
   <main>
     <h1 class="text-center py-4 px-2" id="task-list-title"></h1>
 
@@ -100,8 +100,8 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="changing-title">Type new title for Your task list</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <h5 class="modal-title" id="changing-title">Rename your task list</h5>
+            <button type="button" class="close" data-dismiss="modal" tabindex="-1">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
@@ -127,7 +127,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="creating-task-list">Type new title for Your task list</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button type="button" class="close" data-dismiss="modal" tabindex="-1">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
@@ -154,7 +154,7 @@
           <div class="modal-header">
             <h5 class="modal-title" id="overwriting-task-list">There is a task list called <span
                 id='task-list-to-overwrite'></span></h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button type="button" class="close" data-dismiss="modal" tabindex="-1">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
@@ -176,7 +176,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="upload-task-list-file">Upload task list file</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button type="button" class="close" data-dismiss="modal" tabindex="-1">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
@@ -195,7 +195,7 @@
     <div class="container">
       <div class="input-group mb-3">
         <input type="text" class="form-control" name="task" id="task" placeholder="Type Your task here..."
-          aria-label="Type your task here" aria-describedby="button-add-task">
+          aria-describedby="button-add-task">
         <div class="input-group-append">
           <button class="btn btn-secondary" type="button" id="button-add-task">Add</button>
         </div>
