--- a/tasks.html
+++ b/tasks.html
@@ -148,7 +148,7 @@
     </div>
 
     <div class="modal fade" id="overwrite-task-list" tabindex="-1" role="dialog" aria-labelledby="overwriting-task-list"
-      aria-hidden="true">
+      aria-hidden="true" aria-describedby="info">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -159,7 +159,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <p>Do you want to overwrite it?</p>
+            <p id="info">Do you want to overwrite it?</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
