--- a/tasks.html
+++ b/tasks.html
@@ -68,12 +68,15 @@
           <li class="nav-item nav-link" id="save-tasks" tabindex="0">Save Task List to file</li>
           <div class="dropdown-divider"></div>
           <li class="nav-item nav-link text-success" id="remove-done" data-toggle="popover" data-placement="bottom"
-            data-content="Double click to confirm!" tabindex="0" aria-pressed="Double click to confirm">Remove done tasks</li>
+            data-content="Double click to confirm!" tabindex="0" aria-pressed="Double click to confirm">Remove done
+            tasks</li>
           <li class="nav-item nav-link text-warning" id="remove-all" data-toggle="popover" data-placement="bottom"
-            data-content="Double click to confirm!" tabindex="0" aria-pressed="Double click to confirm">Remove all tasks</li>
+            data-content="Double click to confirm!" tabindex="0" aria-pressed="Double click to confirm">Remove all tasks
+          </li>
           <div class="dropdown-divider"></div>
           <li class="nav-item nav-link text-danger pb-3" id="delete-task-list" data-toggle="popover"
-            data-placement="bottom" data-content="Double click to confirm!" tabindex="0" aria-pressed="Double click to confirm">Delete Task List</li>
+            data-placement="bottom" data-content="Double click to confirm!" tabindex="0"
+            aria-pressed="Double click to confirm">Delete Task List</li>
         </ul>
       </div>
     </nav>
