--- a/tasks.html
+++ b/tasks.html
@@ -7,7 +7,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#ffffe0" />
-  <meta name="Description" content="Task list for better organization and increased productivity!">
+  <meta name="description" content="Task list for better organization and increased productivity!">
+  <meta name="keywords" content="task list, task lists, tasks">
+  <meta name="author" content="Karol Bulwin">
   <link rel="manifest" href="manifest.webmanifest">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -198,7 +200,7 @@
     <div class="container">
       <div class="input-group mb-3">
         <input type="text" class="form-control" name="task" id="task" placeholder="Type Your task here..."
-          aria-describedby="button-add-task">
+          aria-describedby="button-add-task" aria-label="You can type your task here">
         <div class="input-group-append">
           <button class="btn btn-secondary" type="button" id="button-add-task">Add</button>
         </div>
