added some meta tags

--- a/tasks.html
+++ b/tasks.html
@@ -11,6 +11,18 @@
   <meta name="keywords" content="task list, task lists, tasks">
   <meta name="author" content="Karol Bulwin">
   <link rel="manifest" href="manifest.webmanifest">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="application-name" content="Task list">
+  <meta property=og:title content="Task list">
+  <meta property=og:type content="website">
+  <meta property=og:image content="https://karolbulwin.github.io/task-list/public/images/icons/favicon-192.png">
+  <meta property=og:url content="https://karolbulwin.github.io/task-list/tasks.html">
+  <meta property=og:description content="Task list for better organization and increased productivity! No install just use it right away in your browser!">
+  <meta name=twitter:card content="summary">
+  <meta name=twitter:url content="https://karolbulwin.github.io/task-list/tasks.html">
+  <meta name=twitter:title content="Task list">
+  <meta name=twitter:description content="Task list for better organization and increased productivity! No install just use it right away in your browser!">
+  <meta name=twitter:image content="https://karolbulwin.github.io/task-list/public/images/icons/favicon-192.png">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
