--- a/tasks.html
+++ b/tasks.html
@@ -207,6 +207,20 @@
             <li class="nav-item nav-link" id="save-tasks" tabindex="0">
               Save Task List to file
             </li>
+            <li class="nav-item nav-link" id="save-tasks" tabindex="0">
+              <div class="form-check form-check-inline">
+                <label class="form-check-label">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    name="sortAlphabetically"
+                    id="sortAlphabetically"
+                    value="checkedValue"
+                  />
+                  Sort alphabetically
+                </label>
+              </div>
+            </li>
             <div class="dropdown-divider"></div>
             <li
               class="nav-item nav-link text-success"
