--- a/tasks.html
+++ b/tasks.html
@@ -208,15 +208,13 @@
               Save Task List to file
             </li>
             <li class="nav-item nav-link" id="save-tasks" tabindex="0">
-              <div class="form-check form-check-inline">
-                <label class="form-check-label">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    name="sortAlphabetically"
-                    id="sortAlphabetically"
-                    value="checkedValue"
-                  />
+              <div class="custom-control custom-checkbox">
+                <input
+                  type="checkbox"
+                  class="custom-control-input"
+                  id="sortAlphabetically"
+                />
+                <label class="custom-control-label" for="sortAlphabetically">
                   Sort alphabetically
                 </label>
               </div>
