--- a/tasks.html
+++ b/tasks.html
@@ -207,7 +207,7 @@
             <li class="nav-item nav-link" id="save-tasks" tabindex="0">
               Save Task List to file
             </li>
-            <li class="nav-item nav-link" id="save-tasks" tabindex="0">
+            <li class="nav-item nav-link" tabindex="0">
               <div class="custom-control custom-checkbox">
                 <input
                   type="checkbox"
