use import instead

--- a/tasks.html
+++ b/tasks.html
@@ -47,10 +47,9 @@
       content="https://karolbulwin.github.io/task-list/public/images/icons/favicon-192.png"
     />
     <!-- Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans"
-      rel="stylesheet"
-    />
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+    </style>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
